--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-20 09:01+0800\n"
+"POT-Creation-Date: 2023-02-20 09:30+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -367,6 +367,12 @@ msgstr "Seam painting"
 msgid "Remove selection"
 msgstr "Remove selection"
 
+msgid "Shift + Mouse movement"
+msgstr ""
+
+msgid "Rotate preview text"
+msgstr ""
+
 msgid "Text shape"
 msgstr "Text shape"
 
@@ -379,11 +385,20 @@ msgstr "Thickness"
 msgid "Input text"
 msgstr "Input text"
 
-msgid "Modify"
-msgstr "Modify"
+msgid "Embeded depth"
+msgstr ""
 
-msgid "Add"
-msgstr "Añadir"
+msgid "Text Gap"
+msgstr ""
+
+msgid "Angle"
+msgstr ""
+
+msgid "Surface"
+msgstr ""
+
+msgid "Keep horizontal"
+msgstr ""
 
 msgid "Notice"
 msgstr "Date cuenta"
@@ -553,7 +568,7 @@ msgstr ""
 msgid "Login information expired. Please login again."
 msgstr "Los datos de acceso han caducado. Por favor, inicie sesión de nuevo."
 
-msgid "Privacy Policy"
+msgid "Privacy Policy Update"
 msgstr ""
 
 msgid "Loading"
@@ -585,6 +600,24 @@ msgstr "Ongoing uploads"
 
 msgid "Select a G-code file:"
 msgstr "Seleccione un archivo de código G:"
+
+msgid "Import File"
+msgstr ""
+
+msgid "Delete"
+msgstr "Borra"
+
+msgid "Choose files"
+msgstr "Elija los archivos"
+
+msgid "New Folder"
+msgstr ""
+
+msgid "Open"
+msgstr "Abrir"
+
+msgid "Rename"
+msgstr "Renombrar"
 
 msgid "Bambu Studio GUI initialization failed"
 msgstr "Ha fallado la inicialización de la interfaz gráfica de Bambu Studio"
@@ -671,11 +704,11 @@ msgstr "Hide"
 msgid "Show"
 msgstr "Show"
 
-msgid "Delete"
-msgstr "Borra"
-
 msgid "Delete the selected object"
 msgstr "Eliminar el objeto seleccionado"
+
+msgid "Edit Text"
+msgstr ""
 
 msgid "Load..."
 msgstr "Cargar..."
@@ -703,9 +736,6 @@ msgstr "Ajustar como objetos individuales"
 
 msgid "Printable"
 msgstr "Imprimible"
-
-msgid "Rename"
-msgstr "Renombrar"
 
 msgid "Fix model"
 msgstr "Fijar el modelo"
@@ -1445,6 +1475,58 @@ msgstr "Please log out and login to the printer again."
 
 msgid "Failed uploading print file. Please enter ip address again."
 msgstr "Failed uploading print file. Please enter IP address again."
+
+msgid "Choose SLA archive:"
+msgstr ""
+
+msgid "Import file"
+msgstr ""
+
+msgid "Import model and profile"
+msgstr ""
+
+msgid "Import profile only"
+msgstr ""
+
+msgid "Import model only"
+msgstr ""
+
+msgid "Accurate"
+msgstr ""
+
+msgid "Balanced"
+msgstr ""
+
+msgid "Quick"
+msgstr ""
+
+msgid "Importing SLA archive"
+msgstr ""
+
+msgid ""
+"The SLA archive doesn't contain any presets. Please activate some SLA "
+"printer preset first before importing that SLA archive."
+msgstr ""
+
+msgid "Importing canceled."
+msgstr ""
+
+msgid "Importing done."
+msgstr ""
+
+msgid ""
+"The imported SLA archive did not contain any presets. The current SLA "
+"presets were used as fallback."
+msgstr ""
+
+msgid "You cannot load SLA project with a multi-part object on the bed"
+msgstr ""
+
+msgid "Please check your object list before preset changing."
+msgstr ""
+
+msgid "Attention!"
+msgstr "¡Atención!"
 
 msgid "Downloading"
 msgstr ""
@@ -2592,6 +2674,9 @@ msgstr "Permitir varios materiales en la misma placa"
 msgid "Avoid extrusion calibration region"
 msgstr "Evitar la zona de calibración del extrusor"
 
+msgid "Add"
+msgstr "Añadir"
+
 msgid "Add plate"
 msgstr "Añadir placa"
 
@@ -2777,8 +2862,8 @@ msgstr "Sí"
 msgid "No"
 msgstr "No"
 
-msgid " will be closed before creating a new model. Do you want to continue?"
-msgstr " will be closed before creating a new model. Do you want to continue?"
+msgid "will be closed before creating a new model. Do you want to continue?"
+msgstr ""
 
 msgid "Slice plate"
 msgstr "Laminar placa"
@@ -3895,9 +3980,6 @@ msgstr ""
 msgid "The name may show garbage characters!"
 msgstr "¡El nombre puede mostrar caracteres no válidos!"
 
-msgid "Attention!"
-msgstr "¡Atención!"
-
 #, boost-format
 msgid "Failed loading file \"%1%\". An invalid configuration was found."
 msgstr ""
@@ -4424,6 +4506,39 @@ msgstr "Add/Remove materials"
 
 msgid "Add/Remove printers"
 msgstr "Add/Remove printers"
+
+msgid "Same as Global Print Sequence"
+msgstr ""
+
+msgid "Print sequence"
+msgstr "Secuencia de impresión"
+
+msgid "Same as Global Bed Type"
+msgstr "Same as Global Bed Type"
+
+msgid "Cool Plate"
+msgstr "Placa fría"
+
+msgid "Engineering Plate"
+msgstr "Placa de ingeniería"
+
+msgid "High Temp Plate"
+msgstr "Placa de alta temperatura"
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
+
+msgid "By Layer"
+msgstr ""
+
+msgid "By Object"
+msgstr ""
+
+msgid "Accept"
+msgstr ""
+
+msgid "Log Out"
+msgstr ""
 
 msgid "Slice all plate to obtain time and filament estimation"
 msgstr ""
@@ -4969,9 +5084,6 @@ msgstr ""
 "instalada. Un valor de 0 significa que el filamento no admite la impresión "
 "en la placa de ingeniería."
 
-msgid "High Temp Plate"
-msgstr "Placa de alta temperatura"
-
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4979,9 +5091,6 @@ msgstr ""
 "Esta es la temperatura de la cama cuando la placa de alta temperatura está "
 "instalada. Un valor de 0 significa que el filamento no admite la impresión "
 "en la placa de alta temperatura."
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5269,9 +5378,6 @@ msgstr "Lista de materiales"
 
 msgid "Assembly Guide"
 msgstr "Guía de montaje"
-
-msgid "Choose files"
-msgstr "Elija los archivos"
 
 msgid "Author"
 msgstr "Author"
@@ -6318,12 +6424,6 @@ msgstr ""
 msgid "Bed types supported by the printer"
 msgstr "Tipos de cama que admite la impresora"
 
-msgid "Cool Plate"
-msgstr "Placa fría"
-
-msgid "Engineering Plate"
-msgstr "Placa de ingeniería"
-
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Este código G se inserta en cada cambio de capa antes de levantar z"
 
@@ -6482,9 +6582,6 @@ msgstr "Perfiles de proceso compatibles"
 
 msgid "Compatible process profiles condition"
 msgstr "Condición de los perfiles de proceso compatibles"
-
-msgid "Print sequence"
-msgstr "Secuencia de impresión"
 
 msgid "Print sequence, layer by layer or object by object"
 msgstr "Imprimir la secuencia, capa por capa u objeto por objeto"
@@ -8714,6 +8811,14 @@ msgstr ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 
+#~ msgid "Modify"
+#~ msgstr "Modify"
+
+#~ msgid ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+#~ msgstr ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
 
@@ -9209,9 +9314,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Note: The location of IP and access code on the machine is as follows:"
 
-#~ msgid "Open"
-#~ msgstr "Abrir"
-
 #~ msgid "Open &PrusaSlicer"
 #~ msgstr "Abrir &PrusaSlicer"
 
@@ -9358,9 +9460,6 @@ msgstr ""
 
 #~ msgid "Rotation:"
 #~ msgstr "Rotación:"
-
-#~ msgid "Same as Global Bed Type"
-#~ msgstr "Same as Global Bed Type"
 
 #~ msgid "Save configuration as:"
 #~ msgstr "Guardar la configuración como:"
