--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-20 09:01+0800\n"
+"POT-Creation-Date: 2023-02-20 09:30+0800\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -366,6 +366,12 @@ msgstr "Seam painting"
 msgid "Remove selection"
 msgstr "Remove selection"
 
+msgid "Shift + Mouse movement"
+msgstr ""
+
+msgid "Rotate preview text"
+msgstr ""
+
 msgid "Text shape"
 msgstr "Text shape"
 
@@ -378,11 +384,20 @@ msgstr "Thickness"
 msgid "Input text"
 msgstr "Input text"
 
-msgid "Modify"
-msgstr "Modify"
+msgid "Embeded depth"
+msgstr ""
 
-msgid "Add"
-msgstr "Hozzáadás"
+msgid "Text Gap"
+msgstr ""
+
+msgid "Angle"
+msgstr ""
+
+msgid "Surface"
+msgstr ""
+
+msgid "Keep horizontal"
+msgstr ""
 
 msgid "Notice"
 msgstr "Megjegyzés"
@@ -550,7 +565,7 @@ msgstr ""
 msgid "Login information expired. Please login again."
 msgstr "A bejelentkezési adatok érvénytelenek. Kérjük, jelentkezz be újra."
 
-msgid "Privacy Policy"
+msgid "Privacy Policy Update"
 msgstr ""
 
 msgid "Loading"
@@ -582,6 +597,24 @@ msgstr "Ongoing uploads"
 
 msgid "Select a G-code file:"
 msgstr "Válassz egy G-code fájlt:"
+
+msgid "Import File"
+msgstr ""
+
+msgid "Delete"
+msgstr "Törlés"
+
+msgid "Choose files"
+msgstr "Fájlok kiválasztása"
+
+msgid "New Folder"
+msgstr ""
+
+msgid "Open"
+msgstr "Open"
+
+msgid "Rename"
+msgstr "Átnevezés"
 
 msgid "Bambu Studio GUI initialization failed"
 msgstr "Nem sikerült a Bambu Studio GUI inicializálása"
@@ -668,11 +701,11 @@ msgstr "Hide"
 msgid "Show"
 msgstr "Show"
 
-msgid "Delete"
-msgstr "Törlés"
-
 msgid "Delete the selected object"
 msgstr "Kiválasztott objektum törlése"
+
+msgid "Edit Text"
+msgstr ""
 
 msgid "Load..."
 msgstr "Betöltés..."
@@ -700,9 +733,6 @@ msgstr "Beállítás különálló objektumokként"
 
 msgid "Printable"
 msgstr "Nyomtatható"
-
-msgid "Rename"
-msgstr "Átnevezés"
 
 msgid "Fix model"
 msgstr "Model javítása"
@@ -1440,6 +1470,58 @@ msgstr "Please log out and login to the printer again."
 
 msgid "Failed uploading print file. Please enter ip address again."
 msgstr "Failed uploading print file. Please enter IP address again."
+
+msgid "Choose SLA archive:"
+msgstr ""
+
+msgid "Import file"
+msgstr ""
+
+msgid "Import model and profile"
+msgstr ""
+
+msgid "Import profile only"
+msgstr ""
+
+msgid "Import model only"
+msgstr ""
+
+msgid "Accurate"
+msgstr ""
+
+msgid "Balanced"
+msgstr ""
+
+msgid "Quick"
+msgstr ""
+
+msgid "Importing SLA archive"
+msgstr ""
+
+msgid ""
+"The SLA archive doesn't contain any presets. Please activate some SLA "
+"printer preset first before importing that SLA archive."
+msgstr ""
+
+msgid "Importing canceled."
+msgstr ""
+
+msgid "Importing done."
+msgstr ""
+
+msgid ""
+"The imported SLA archive did not contain any presets. The current SLA "
+"presets were used as fallback."
+msgstr ""
+
+msgid "You cannot load SLA project with a multi-part object on the bed"
+msgstr ""
+
+msgid "Please check your object list before preset changing."
+msgstr ""
+
+msgid "Attention!"
+msgstr "Figyelem!"
 
 msgid "Downloading"
 msgstr "Letöltés"
@@ -2577,6 +2659,9 @@ msgstr "Többféle anyag használata egy tálcán"
 msgid "Avoid extrusion calibration region"
 msgstr "Extrudáláskalibráció környékének elkerülése"
 
+msgid "Add"
+msgstr "Hozzáadás"
+
 msgid "Add plate"
 msgstr "Tálca hozzáadása"
 
@@ -2762,8 +2847,8 @@ msgstr "Igen"
 msgid "No"
 msgstr "Nem"
 
-msgid " will be closed before creating a new model. Do you want to continue?"
-msgstr " will be closed before creating a new model. Do you want to continue?"
+msgid "will be closed before creating a new model. Do you want to continue?"
+msgstr ""
 
 msgid "Slice plate"
 msgstr "Tálca szeletelése"
@@ -3877,9 +3962,6 @@ msgid "The name may show garbage characters!"
 msgstr ""
 "A nem támogatott szövegkódolás miatt helytelen karakterek jelenhetnek meg!"
 
-msgid "Attention!"
-msgstr "Figyelem!"
-
 #, boost-format
 msgid "Failed loading file \"%1%\". An invalid configuration was found."
 msgstr "Nem sikerült betölteni \"%1%\" fájlt. Érvénytelen konfiguráció."
@@ -4400,6 +4482,39 @@ msgstr "Add/Remove materials"
 
 msgid "Add/Remove printers"
 msgstr "Add/Remove printers"
+
+msgid "Same as Global Print Sequence"
+msgstr ""
+
+msgid "Print sequence"
+msgstr "Nyomtatás sorrendje"
+
+msgid "Same as Global Bed Type"
+msgstr "Same as Global Bed Type"
+
+msgid "Cool Plate"
+msgstr "Cool Plate"
+
+msgid "Engineering Plate"
+msgstr "Engineering Plate"
+
+msgid "High Temp Plate"
+msgstr "High Temp Plate"
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
+
+msgid "By Layer"
+msgstr ""
+
+msgid "By Object"
+msgstr ""
+
+msgid "Accept"
+msgstr ""
+
+msgid "Log Out"
+msgstr ""
 
 msgid "Slice all plate to obtain time and filament estimation"
 msgstr "Szeleteld fel az összes tálcát az idő és a filament becsléséhez"
@@ -4935,9 +5050,6 @@ msgstr ""
 "Asztalhőmérséklet a mérnöki tálca használatával. A 0 érték azt jelenti, hogy "
 "a filament nem támogatja az Engineering Plate-re történő nyomtatást"
 
-msgid "High Temp Plate"
-msgstr "High Temp Plate"
-
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4945,9 +5057,6 @@ msgstr ""
 "Asztalhőmérséklet a magas hőmérsékletű tálca használatával. A 0 érték azt "
 "jelenti, hogy a filament nem támogatja a High Temp Plate-re történő "
 "nyomtatást"
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5235,9 +5344,6 @@ msgstr "Alkatrészlista"
 
 msgid "Assembly Guide"
 msgstr "Összeszerelési útmutató"
-
-msgid "Choose files"
-msgstr "Fájlok kiválasztása"
 
 msgid "Author"
 msgstr "Author"
@@ -6279,12 +6385,6 @@ msgstr ""
 msgid "Bed types supported by the printer"
 msgstr "Nyomtató által támogatott asztaltípusok"
 
-msgid "Cool Plate"
-msgstr "Cool Plate"
-
-msgid "Engineering Plate"
-msgstr "Engineering Plate"
-
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "Ez a G-kód minden rétegváltáshoz bekerül a Z tengely emelése előtt."
 
@@ -6442,9 +6542,6 @@ msgstr "Kompatibilis folyamatprofilok"
 
 msgid "Compatible process profiles condition"
 msgstr "Kompatibilis folyamatprofil állapot"
-
-msgid "Print sequence"
-msgstr "Nyomtatás sorrendje"
 
 msgid "Print sequence, layer by layer or object by object"
 msgstr "Nyomtatási sorrend, rétegenként vagy tárgyanként"
@@ -8666,6 +8763,14 @@ msgstr ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 
+#~ msgid "Modify"
+#~ msgstr "Modify"
+
+#~ msgid ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+#~ msgstr ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
 
@@ -9162,9 +9267,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Note: The location of IP and access code on the machine is as follows:"
 
-#~ msgid "Open"
-#~ msgstr "Open"
-
 #~ msgid "Open &PrusaSlicer"
 #~ msgstr "PrusaSlicer megnyitása"
 
@@ -9311,9 +9413,6 @@ msgstr ""
 
 #~ msgid "Rotation:"
 #~ msgstr "Forgatás:"
-
-#~ msgid "Same as Global Bed Type"
-#~ msgstr "Same as Global Bed Type"
 
 #~ msgid "Save configuration as:"
 #~ msgstr "Konfiguráció mentése mint:"
