--- a/bbl/i18n/it/BambuStudio_it.po
+++ b/bbl/i18n/it/BambuStudio_it.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-20 09:01+0800\n"
+"POT-Creation-Date: 2023-02-20 09:30+0800\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -365,6 +365,12 @@ msgstr "Seam painting"
 msgid "Remove selection"
 msgstr "Remove selection"
 
+msgid "Shift + Mouse movement"
+msgstr ""
+
+msgid "Rotate preview text"
+msgstr ""
+
 msgid "Text shape"
 msgstr "Text shape"
 
@@ -377,11 +383,20 @@ msgstr "Thickness"
 msgid "Input text"
 msgstr "Input text"
 
-msgid "Modify"
-msgstr "Modify"
+msgid "Embeded depth"
+msgstr ""
 
-msgid "Add"
-msgstr "Aggiungi"
+msgid "Text Gap"
+msgstr ""
+
+msgid "Angle"
+msgstr ""
+
+msgid "Surface"
+msgstr ""
+
+msgid "Keep horizontal"
+msgstr ""
 
 msgid "Notice"
 msgstr "Avvertenza"
@@ -544,7 +559,7 @@ msgstr ""
 msgid "Login information expired. Please login again."
 msgstr "Login information expired. Please login again."
 
-msgid "Privacy Policy"
+msgid "Privacy Policy Update"
 msgstr ""
 
 msgid "Loading"
@@ -576,6 +591,24 @@ msgstr "Ongoing uploads"
 
 msgid "Select a G-code file:"
 msgstr "Select a G-code file:"
+
+msgid "Import File"
+msgstr ""
+
+msgid "Delete"
+msgstr "Elimina"
+
+msgid "Choose files"
+msgstr "Choose files"
+
+msgid "New Folder"
+msgstr ""
+
+msgid "Open"
+msgstr "Open"
+
+msgid "Rename"
+msgstr "Rinomina"
 
 msgid "Bambu Studio GUI initialization failed"
 msgstr "Bambu Studio GUI initialization failed"
@@ -662,11 +695,11 @@ msgstr "Hide"
 msgid "Show"
 msgstr "Show"
 
-msgid "Delete"
-msgstr "Elimina"
-
 msgid "Delete the selected object"
 msgstr "Delete the selected object"
+
+msgid "Edit Text"
+msgstr ""
 
 msgid "Load..."
 msgstr "Caricamento..."
@@ -694,9 +727,6 @@ msgstr "Set as Individual Objects"
 
 msgid "Printable"
 msgstr "Stampabile"
-
-msgid "Rename"
-msgstr "Rinomina"
 
 msgid "Fix model"
 msgstr "Fix Model"
@@ -1417,6 +1447,58 @@ msgstr "Please log out and login to the printer again."
 
 msgid "Failed uploading print file. Please enter ip address again."
 msgstr "Failed uploading print file. Please enter IP address again."
+
+msgid "Choose SLA archive:"
+msgstr ""
+
+msgid "Import file"
+msgstr ""
+
+msgid "Import model and profile"
+msgstr ""
+
+msgid "Import profile only"
+msgstr ""
+
+msgid "Import model only"
+msgstr ""
+
+msgid "Accurate"
+msgstr ""
+
+msgid "Balanced"
+msgstr ""
+
+msgid "Quick"
+msgstr ""
+
+msgid "Importing SLA archive"
+msgstr ""
+
+msgid ""
+"The SLA archive doesn't contain any presets. Please activate some SLA "
+"printer preset first before importing that SLA archive."
+msgstr ""
+
+msgid "Importing canceled."
+msgstr ""
+
+msgid "Importing done."
+msgstr ""
+
+msgid ""
+"The imported SLA archive did not contain any presets. The current SLA "
+"presets were used as fallback."
+msgstr ""
+
+msgid "You cannot load SLA project with a multi-part object on the bed"
+msgstr ""
+
+msgid "Please check your object list before preset changing."
+msgstr ""
+
+msgid "Attention!"
+msgstr "Attenzione!"
 
 msgid "Downloading"
 msgstr "Downloading"
@@ -2553,6 +2635,9 @@ msgstr "Allow multiple materials on same plate"
 msgid "Avoid extrusion calibration region"
 msgstr "Avoid extrusion calibration region"
 
+msgid "Add"
+msgstr "Aggiungi"
+
 msgid "Add plate"
 msgstr "Add Plate"
 
@@ -2738,8 +2823,8 @@ msgstr "Yes"
 msgid "No"
 msgstr "No"
 
-msgid " will be closed before creating a new model. Do you want to continue?"
-msgstr " will be closed before creating a new model. Do you want to continue?"
+msgid "will be closed before creating a new model. Do you want to continue?"
+msgstr ""
 
 msgid "Slice plate"
 msgstr "Slice plate"
@@ -3852,9 +3937,6 @@ msgstr "Component name(s) inside step file not in UTF8 format!"
 msgid "The name may show garbage characters!"
 msgstr "Because of unsupported text encoding, garbage characters may appear!"
 
-msgid "Attention!"
-msgstr "Attenzione!"
-
 #, boost-format
 msgid "Failed loading file \"%1%\". An invalid configuration was found."
 msgstr "Failed loading file \"%1%\". An invalid configuration was found."
@@ -4369,6 +4451,39 @@ msgstr "Add/Remove materials"
 
 msgid "Add/Remove printers"
 msgstr "Add/Remove printers"
+
+msgid "Same as Global Print Sequence"
+msgstr ""
+
+msgid "Print sequence"
+msgstr "Print sequence"
+
+msgid "Same as Global Bed Type"
+msgstr "Same as Global Bed Type"
+
+msgid "Cool Plate"
+msgstr "Cool Plate"
+
+msgid "Engineering Plate"
+msgstr "Engineering Plate"
+
+msgid "High Temp Plate"
+msgstr "High Temp Plate"
+
+msgid "Textured PEI Plate"
+msgstr "Textured PEI Plate"
+
+msgid "By Layer"
+msgstr ""
+
+msgid "By Object"
+msgstr ""
+
+msgid "Accept"
+msgstr ""
+
+msgid "Log Out"
+msgstr ""
 
 msgid "Slice all plate to obtain time and filament estimation"
 msgstr "Slice all plates to obtain time and filament estimation"
@@ -4899,9 +5014,6 @@ msgstr ""
 "This is the bed temperature when the engineering plate is installed. A value "
 "of 0 means the filament does not support printing on the Engineering Plate."
 
-msgid "High Temp Plate"
-msgstr "High Temp Plate"
-
 msgid ""
 "Bed temperature when high temperature plate is installed. Value 0 means the "
 "filament does not support to print on the High Temp Plate"
@@ -4909,9 +5021,6 @@ msgstr ""
 "This is the bed temperature when the high temperature plate is installed. A "
 "value of 0 means the filament does not support printing on the High Temp "
 "Plate."
-
-msgid "Textured PEI Plate"
-msgstr "Textured PEI Plate"
 
 msgid ""
 "Bed temperature when Textured PEI Plate is installed. Value 0 means the "
@@ -5194,9 +5303,6 @@ msgstr "Bill of Materials"
 
 msgid "Assembly Guide"
 msgstr "Assembly Guide"
-
-msgid "Choose files"
-msgstr "Choose files"
 
 msgid "Author"
 msgstr "Author"
@@ -6226,12 +6332,6 @@ msgstr ""
 msgid "Bed types supported by the printer"
 msgstr "Bed types supported by the printer"
 
-msgid "Cool Plate"
-msgstr "Cool Plate"
-
-msgid "Engineering Plate"
-msgstr "Engineering Plate"
-
 msgid "This G-code is inserted at every layer change before lifting z"
 msgstr "This G-code is inserted at every layer change before lifting z."
 
@@ -6388,9 +6488,6 @@ msgstr "Compatible process profiles"
 
 msgid "Compatible process profiles condition"
 msgstr "Compatible process profiles condition"
-
-msgid "Print sequence"
-msgstr "Print sequence"
 
 msgid "Print sequence, layer by layer or object by object"
 msgstr ""
@@ -8590,6 +8687,14 @@ msgstr ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 
+#~ msgid "Modify"
+#~ msgstr "Modify"
+
+#~ msgid ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+#~ msgstr ""
+#~ " will be closed before creating a new model. Do you want to continue?"
+
 #~ msgid "\\u2103"
 #~ msgstr "\\u2103"
 
@@ -9081,9 +9186,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Note: The location of IP and access code on the machine is as follows:"
 
-#~ msgid "Open"
-#~ msgstr "Open"
-
 #~ msgid "Open &PrusaSlicer"
 #~ msgstr "Apri &PrusaSlicer"
 
@@ -9229,9 +9331,6 @@ msgstr ""
 
 #~ msgid "Rotation:"
 #~ msgstr "Rotation:"
-
-#~ msgid "Same as Global Bed Type"
-#~ msgstr "Same as Global Bed Type"
 
 #~ msgid "Save configuration as:"
 #~ msgstr "Salva configurazione come:"
